[gd_scene load_steps=8 format=3 uid="uid://b5bwe87xqf6oe"]

[ext_resource type="Script" path="res://scenes/world_map/world_map.gd" id="1"]
[ext_resource type="Script" path="res://scenes/world_map/grid_renderer.gd" id="2"]
[ext_resource type="Script" path="res://scenes/world_map/camera_controller.gd" id="3"]
[ext_resource type="Script" path="res://scenes/world_map/world_map_ui.gd" id="4"]
[ext_resource type="Script" path="res://scenes/world_map/route_renderer.gd" id="5"]
[ext_resource type="Script" path="res://scenes/world_map/vehicle_renderer.gd" id="6"]
[ext_resource type="PackedScene" uid="uid://dpq4m7xqgape" path="res://scenes/ui/pause_menu.tscn" id="7"]

[node name="WorldMap" type="Node2D"]
script = ExtResource("1")

[node name="GridRenderer" type="Node2D" parent="."]
script = ExtResource("2")

[node name="RoutesRenderer" type="Node2D" parent="."]
script = ExtResource("5")

[node name="VehiclesRenderer" type="Node2D" parent="."]
script = ExtResource("6")

[node name="FacilitiesContainer" type="Node2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
script = ExtResource("3")

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("4")

[node name="HUD" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="MoneyLabel" type="Label" parent="UI/HUD"]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 200.0
offset_bottom = 50.0
theme_override_font_sizes/font_size = 24
text = "Money: $5000"

[node name="DateLabel" type="Label" parent="UI/HUD"]
layout_mode = 0
offset_left = 20.0
offset_top = 60.0
offset_right = 200.0
offset_bottom = 90.0
theme_override_font_sizes/font_size = 18
text = "Date: 1850-01-01"

[node name="ProductionButton" type="Button" parent="UI/HUD"]
layout_mode = 0
offset_left = 20.0
offset_top = 100.0
offset_right = 200.0
offset_bottom = 135.0
text = "ðŸ“Š Production Stats"

[node name="ModePanel" type="PanelContainer" parent="UI/HUD"]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -180.0
offset_top = 15.0
offset_right = 180.0
offset_bottom = 65.0
grow_horizontal = 2

[node name="ModeLabel" type="Label" parent="UI/HUD/ModePanel"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 24
text = "ðŸ”¨ DEMOLISH MODE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Tooltip" type="PanelContainer" parent="UI/HUD"]
visible = false
layout_mode = 0
offset_left = 100.0
offset_top = 100.0
offset_right = 400.0
offset_bottom = 250.0

[node name="MarginContainer" type="MarginContainer" parent="UI/HUD/Tooltip"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="UI/HUD/Tooltip/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="FacilityName" type="Label" parent="UI/HUD/Tooltip/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Facility Name"

[node name="FacilityType" type="Label" parent="UI/HUD/Tooltip/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Type: barley_field"

[node name="HSeparator" type="HSeparator" parent="UI/HUD/Tooltip/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ProductionStatus" type="Label" parent="UI/HUD/Tooltip/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Production: Active"

[node name="InventoryLabel" type="Label" parent="UI/HUD/Tooltip/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Inventory:"

[node name="InventoryList" type="Label" parent="UI/HUD/Tooltip/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "  barley: 50
  malt: 20"

[node name="ProductionPanel" type="PanelContainer" parent="UI/HUD"]
visible = false
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -300.0
offset_right = -10.0
offset_bottom = 300.0
grow_horizontal = 0
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="UI/HUD/ProductionPanel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="UI/HUD/ProductionPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="HeaderHBox" type="HBoxContainer" parent="UI/HUD/ProductionPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="UI/HUD/ProductionPanel/MarginContainer/VBoxContainer/HeaderHBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "PRODUCTION"

[node name="CloseButton" type="Button" parent="UI/HUD/ProductionPanel/MarginContainer/VBoxContainer/HeaderHBox"]
layout_mode = 2
text = "X"

[node name="HSeparator" type="HSeparator" parent="UI/HUD/ProductionPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="UI/HUD/ProductionPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="FacilityList" type="VBoxContainer" parent="UI/HUD/ProductionPanel/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="HelpPanel" type="PanelContainer" parent="UI/HUD"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -200.0
offset_right = 250.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="UI/HUD/HelpPanel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="UI/HUD/HelpPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="UI/HUD/HelpPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "KEYBOARD SHORTCUTS"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="UI/HUD/HelpPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Shortcuts" type="Label" parent="UI/HUD/HelpPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "F1 - Toggle this help panel
ESC - Pause menu / Cancel mode
F5 - Quick Save
F9 - Quick Load

SHIFT+Click - Enter factory interior
Double-Click - Enter factory interior

Right-Click - Cancel placement mode"
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="UI/HUD/HelpPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CloseLabel" type="Label" parent="UI/HUD/HelpPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Press F1 or ESC to close"
horizontal_alignment = 1

[node name="BottomBar" type="Panel" parent="UI"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -120.0
grow_horizontal = 2
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="UI/BottomBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="UI/BottomBar/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="TitleLabel" type="Label" parent="UI/BottomBar/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "BUILD MENU"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="UI/BottomBar/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="UI/BottomBar/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 3
vertical_scroll_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UI/BottomBar/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="PauseMenu" parent="." instance=ExtResource("7")]

[connection signal="build_button_pressed" from="UI" to="." method="_on_build_button_pressed"]
[connection signal="create_route_button_pressed" from="UI" to="." method="_on_create_route_button_pressed"]
[connection signal="demolish_button_pressed" from="UI" to="." method="_on_demolish_button_pressed"]
